Fix small IntelliJ warnings